ทำการ build main ใหม่ - close #200
